--- a/NewApp/NewApp/Views/Shared/_LoginPartial.cshtml
+++ b/NewApp/NewApp/Views/Shared/_LoginPartial.cshtml
@@ -9,6 +9,7 @@
         <li>
             @Html.ActionLink("boo " + User.Identity.GetUserName() + "!", "ProfileOverview", "Profile", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
+        <li>Саша молодец</li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
