added model sharing

--- a/NewApp/NewApp/Views/Account/ResetPassword.cshtml
+++ b/NewApp/NewApp/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.ResetPasswordViewModel
+﻿@model NewApp.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
