--- a/NewApp/NewApp/Views/Manage/AddPhoneNumber.cshtml
+++ b/NewApp/NewApp/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.AddPhoneNumberViewModel
+﻿@model NewApp.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
