--- a/NewApp/NewApp/Views/Manage/ChangePassword.cshtml
+++ b/NewApp/NewApp/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.ChangePasswordViewModel
+﻿@model NewApp.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
