--- a/NewApp/NewApp/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/NewApp/NewApp/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.VerifyPhoneNumberViewModel
+﻿@model NewApp.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
