--- a/NewApp/NewApp/Views/Profile/ProfileOverview.cshtml
+++ b/NewApp/NewApp/Views/Profile/ProfileOverview.cshtml
@@ -1,7 +1,6 @@
-﻿@model NewApp.Models.Profile
+﻿@model NewApp.ViewModels.ProfileViewModels
 
 <div>
-    @Html.HiddenFor(m => m.Id)
     @Html.TextBoxFor(m => m.Comment)
     @Html.TextBoxFor(m => m.MobilePhone)
     <h3>Выберите файл для загрузки</h3>
