--- a/NewApp/NewApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/NewApp/NewApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.ExternalLoginConfirmationViewModel
+﻿@model NewApp.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
