--- a/NewApp/NewApp/Views/Account/ForgotPassword.cshtml
+++ b/NewApp/NewApp/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.ForgotPasswordViewModel
+﻿@model NewApp.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
