--- a/NewApp/NewApp/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/NewApp/NewApp/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.ExternalLoginListViewModel
+﻿@model NewApp.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
