--- a/NewApp/NewApp/Views/Manage/ManageLogins.cshtml
+++ b/NewApp/NewApp/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.ManageLoginsViewModel
+﻿@model NewApp.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
