--- a/NewApp/NewApp/Views/Manage/SetPassword.cshtml
+++ b/NewApp/NewApp/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewApp.Models.SetPasswordViewModel
+﻿@model NewApp.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
